several updates to the interface, GA tracking code and Read.me

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
   <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta charset="utf-8">
-    <title>week</title>
+    <meta name="description" content="Calculate 52-week savings The 52 Week Money Challenge is an incremental savings plan that will help you save money throughout the year.The concept is simple: start the year off by saving a 100 KES the first week, and then put away an additional 100 KES each week after that. At the end of 52 weeks, you'll save KES137,800!"> 
+    <meta name="keywords" content="52 week savings challenge"/>
+    <meta name="keyword" content="#52weekChallenge"/> 
+    <title>#52WeekChallenge Calculator</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-89813918-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-89813918-2');
+</script>
+
 </html>
